force-app/main/default/objects/webServiceConfig__c/webServiceConfig__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>custom setting responsible to handle information for Web Services</description>
    <label>Web Service Config</label>
</CustomObject>