force-app/main/default/objects/webServiceConfig__c/fields/end_point__c.field-meta.xml
<CustomField>
    <fullName>end_point__c</fullName>
    <description>endPoint to web services calls</description>
    <label>End Point</label>
    <length>50</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>