force-app/main/default/objects/webServiceConfig__c/fields/format__c.field-meta.xml
<CustomField>
    <fullName>format__c</fullName>
    <defaultValue>'JSON'</defaultValue>
    <description>format to return from web services calls</description>
    <label>Format</label>
    <length>8</length>
    <required>true</required>
    <type>Text</type>
</CustomField>